# livelybot_serial

./: .clang-format  .clang-tidy  CMakeLists.txt  package.xml
include/: jacobia.h  lively_serial.h  motor_struct.h  serial_struct.h
include/crc/: crc16.h
include/hardware/: canboard.h  canport.h  motor.h  robot.h
src/: lively_serial.cc  lively_serial.cpp  serial_t.cpp  test_imu.cpp  test_motor.cpp  test_motor_run.cpp  test_p_sit.cpp  test_pose_torque.cpp  test_torque.cpp
src/hardware/: canboard.cpp  canport.cpp  motor.cc  motor.cpp  robot.cpp
src/test/: test_imu.cpp  test_serial.cpp
